Replace old file with new version

--- a/README
+++ b/README
@@ -1,30 +1,91 @@
-# HACK&CHANGE 2025: Анализатор тональности отзывов
+# Сервис анализа тональности отзывов
 
-Решение кейса по автоматической разметке и анализу тональности текстов.
-Веб-сервис позволяет загружать датасеты, определять эмоциональную окраску отзывов (Позитив/Негатив/Нейтрально), визуализировать статистику и проводить валидацию модели.
+Данный репозиторий содержит full-stack веб-приложение, разработанное для автоматического анализа тональности пользовательских отзывов. Система принимает на вход наборы данных в форматах CSV или XLSX, обрабатывает текст с использованием методов обработки естественного языка (NLP) и классифицирует отзывы на положительные, негативные или нейтральные с использованием модели логистической регрессии.
 
-![Python](https://img.shields.io/badge/Python-3.10-blue)
-![React](https://img.shields.io/badge/React-18-blue)
-![FastAPI](https://img.shields.io/badge/FastAPI-0.95-green)
-![Docker](https://img.shields.io/badge/Docker-Enabled-blue)
+## Архитектура системы
 
-## Основные возможности
+Решение построено на базе архитектуры Клиент-Сервер и контейнеризировано с использованием Docker.
 
-* **Умный парсинг:** Поддержка `.csv` и `.xlsx` с любыми разделителями и кодировками.
-* **ML-Ядро:** Классическая модель (TF-IDF + Logistic Regression) с высокой скоростью работы.
-* **Препроцессинг:** Очистка текста от мусора, обработка смайликов (emoji-to-text), лемматизация.
-* **Аналитика:**
-    * Распределение тональности (Pie Chart).
-    * Анализ источников отзывов.
-    * Топ слов для каждой категории (с фильтрацией стоп-слов).
-* **Human-in-the-Loop:** Возможность ручной корректировки тональности прямо в интерфейсе.
-* **Валидация:** Расчет честных метрик (Macro F1, Precision, Recall, Accuracy) и построение Матрицы ошибок.
-* **Экспорт:** Скачивание размеченного датасета в формате CSV.
+Обзор компонентов:
 
-## 🛠 Технологический стек
+1. Frontend (Клиентская часть):
+   Разработан на React.js.
+   Служит пользовательским интерфейсом для загрузки файлов, визуализации данных (графики, метрики) и ручной валидации.
+   Хостинг осуществляется через Nginx в производственной среде.
+   Взаимодействует с бэкендом посредством REST API.
 
-* **Frontend:** React, Vite, TailwindCSS, Recharts (графики), Lucide-react (иконки).
-* **Backend:** Python, FastAPI, Pandas, Scikit-learn, Pymorphy3.
-* **Deployment:** Docker & Docker Compose (Nginx для фронтенда).
+2. Backend (Серверная часть):
+   Разработан на Python с использованием фреймворка FastAPI.
+   Отвечает за парсинг файлов (CSV/Excel), очистку данных и сериализацию.
+   Предоставляет эндпоинты для анализа (/analyze) и валидации метрик (/validate).
+
+3. ML Core (Ядро машинного обучения):
+   Препроцессинг: Реализует нормализацию текста, лемматизацию (Pymorphy3), фильтрацию стоп-слов и преобразование эмодзи в текст.
+   Модель: Векторизатор TF-IDF в связке с Логистической Регрессией (scikit-learn), загружаемая из сериализованного pickle-файла.
+
+Поток данных:
+Загрузка файла пользователем -> Nginx/React -> FastAPI -> Пайплайн препроцессинга -> Предсказание модели -> JSON ответ -> Визуализация на клиенте
+
+## Технологический стек
+
+Frontend: React, Recharts (визуализация), Lucide-react (иконки).
+Backend: Python 3.10, FastAPI, Pandas, Scikit-learn, Pymorphy3.
+Инфраструктура: Docker, Docker Compose.
+
+## Логика классификации
+
+Модель работает со следующей маркировкой классов согласно условиям задачи:
+0: Нейтральный
+1: Позитивный
+2: Негативный
+
+## Установка и запуск
+
+### Требования
+Установленные Docker и Docker Compose.
+
+### Запуск через Docker (Рекомендуется)
+
+1. Клонирование репозитория:
+   git clone https://github.com/woarrr/key-classifier.git
+   cd key-classifier
+
+2. Сборка и запуск контейнеров:
+   docker-compose up --build
+
+3. Доступ к приложению:
+   Веб-интерфейс: http://localhost:3000
+   API Документация: http://localhost:8000/docs
+
+### Локальная разработка (Вручную)
+
+Если Docker недоступен, компоненты можно запустить по отдельности.
+
+Backend:
+cd backend
+pip install -r requirements.txt
+python main.py
+Сервер запустится на http://localhost:8000
+
+Frontend:
+cd frontend
+npm install
+npm run build
+Запуск сервера разработки:
+npm run dev
+
+## Функциональность
+
+Парсинг файлов: Обработка CSV и Excel файлов с автоматическим определением разделителей и кодировки.
+Анализ данных:
+   - Статистика распределения тональности.
+   - Анализ источников отзывов.
+   - Частотный анализ (топ значимых слов для каждой тональности).
+Модуль валидации: Позволяет сравнивать предсказания модели с эталонным датасетом (Golden Dataset) с расчетом метрик Macro-F1, Precision, Recall и Accuracy.
+Экспорт: Возможность скачивания размеченных данных в формате CSV.
+
+## Структура проекта
+
+
 
 ссылка на репозиторий: "https://github.com/woarrr/key-classifier">
